--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,19 +2,28 @@
     <div class="bg-container">
         <div class="contact">
             <div class="contact-text">
-                <h2 >Contact me</h2>
+                <h2>Contact me</h2>
                 <span>Get in touch via the form below, or by emailing: </span><br>
                 <span class="my-email">andrea.bohme@gmail.com</span>
             </div>
-            <form #form action="https://andrea-boehme.developerakademie.net/portfolio-ab/send_mail.php" method="POST" [formGroup]="contact">
+            <form #form action="https://andrea-boehme.developerakademie.net/portfolio/send_mail.php" method="POST"
+                #myForm="ngForm" (ngSubmit)="onSubmit(myForm)" ngNativeValidate novalidate>
                 <span>Name:</span>
-                <input type="text" name="name" formControlName="name" placeholder="Please enter your name" required [(ngModel)]="name">
+                <input type="text" id="name" name="name" [(ngModel)]="name" placeholder="Please enter your name"
+                    required>
                 <span>Email adress:</span>
-                <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" formControlName="email" placeholder="Please enter your email address" required [(ngModel)]="email">
+                <input type="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" type="email"
+                    name="email" [(ngModel)]="email" required placeholder="Please enter your email address">
                 <span>Message:</span>
-                <textarea name="message" formControlName="message" placeholder="Please enter your message" required [(ngModel)]="message"></textarea>
+                <textarea id="message" name="message" [(ngModel)]="message" rows="3" required
+                    placeholder="Please enter your message"></textarea>
                 <div class="btn">
-                    <button [disabled]="!contact.valid" type="submit" value="Submit" (click)="form.submit(); onSubmit()">Send</button>
+                    <button [disabled]="!myForm.valid" type="submit" value="Submit"
+                        (click)="form.submit()">Send</button>
+                </div>
+                <div *ngIf="submitComplete" class="confirmation">
+                    <p>{{ submitReport }}</p>
+                    <button (click)="closeConfirmation()">OK</button>
                 </div>
             </form>
         </div>
