--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -167,3 +167,41 @@
       }
     }
   }
+
+  .confirmation {
+    color: #8892b0;
+    font-size: 18px;
+    z-index: 99;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 300px;
+    width: 400px;
+    border-radius: 10px;
+    border: 2px solid #8892b0;
+    padding: 16px;
+    box-sizing: border-box;
+  
+    button {
+      display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 30px;
+        font-size: 18px;
+        border-radius: 10px;
+        width: 90px;
+        height: 50px;
+        background-color: #1e3563;
+        color: #8892b0;
+        border: 1px solid #CCD6F6;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #8892b0;
+            color: #2a3c5a;
+        }
+    }
+  }
+
