--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -39,6 +39,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-size: 16px;
     margin-top: 70px;
     margin-left: 10px;
     margin-right: 10px;
@@ -86,7 +87,7 @@
         align-items: center;
         margin-top: 50px !important;
     }
-    
+
     .about-description {
         flex-direction: column;
         align-items: center;
