--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,12 +1,3 @@
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
 .icon {
     img {
         height: 50px;
@@ -15,18 +6,20 @@
 }
 
 .bg-container-footer {
-    height: 100%;
+    height: 60px;
     width: 80%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .link {
     a {
         margin-right: 24px;
         text-decoration: none;
-        color: black;   
+        color: black;
         font-size: 18px;
         font-weight: 900;
 
@@ -37,7 +30,7 @@
     }
 }
 
-@media(max-width: 570px) {
+@media (max-width: 570px) {
     .link a {
         font-size: 14px;
     }
@@ -50,8 +43,7 @@
     }
 }
 
-
-@media(max-width: 380px) {
+@media (max-width: 380px) {
     .link a {
         font-size: 10px;
     }
