--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,18 +1,14 @@
-.bg1 {
-    height: 100%;
-}
-
 .bg-container {
-    display: flex;  
-    min-height: 100%;
+    display: flex;
+    min-height: 100vh;
 
     img {
         object-fit: cover;
         border-radius: 10px;
     }
-  }
-  
-  .head {
+}
+
+.head {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -20,31 +16,30 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-  }
-  
-  .head img{
+}
+
+.head img {
     width: 80%;
     height: 80%;
     margin-left: 0px;
     vertical-align: middle;
-  }
-  
-  .head-greeting {
+}
+
+.head-greeting {
     padding: 1rem;
     vertical-align: middle;
     width: 100%;
     height: 70%;
 
     h1 {
-        font-size: 61px;
-        color: #CCD6F6;
+        font-size: 48px !important;
+        color: #ccd6f6;
         margin-bottom: 40px;
-        width: 250px;
     }
 
     span {
         font-size: 40px;
-        color: #CCD6F6;
+        color: #ccd6f6;
         padding: 10px;
     }
 
@@ -66,7 +61,7 @@
         padding: 20px;
         background-color: transparent;
         color: #8892b0;
-        border: 3px solid #CCD6F6;
+        border: 3px solid #ccd6f6;
         cursor: pointer;
 
         &:hover {
@@ -74,57 +69,62 @@
             color: #2a3c5a;
         }
     }
-  }
+}
 
-  .hide-mobile {
+@media (max-width: 1030px) {
+    .head-greeting h1 {
+        font-size: 40px !important;
+    }
+}
+
+.hide-mobile {
     display: flex;
-  }
+}
 
-  .show-mobile {
+.show-mobile {
     display: none;
 }
 
-
-@media(max-width: 1190px) {
-.head-greeting {
-    span {
-        font-size: 30px !important;
+@media (max-width: 1190px) {
+    .head-greeting {
+        span {
+            font-size: 30px !important;
+        }
     }
 }
-}
-  @media(max-width: 900px) {
+@media (max-width: 900px) {
     .head {
         flex-direction: column-reverse;
         justify-content: unset;
         align-items: center;
         text-align: center;
-      }
+    }
 
-      .head img{
+    .head img {
         width: 40%;
         height: 60%;
-        margin-left:0px;
+        margin-left: 0px;
         vertical-align: middle;
-      }
+    }
 
-      .head-greeting {
+    .head-greeting {
         vertical-align: unset;
-      }
+    }
 
-      .hide-mobile {
+    .hide-mobile {
         display: none;
-      }
+    }
 
-      .show-mobile {
-          display: flex;
-      }
+    .show-mobile {
+        display: flex;
+    }
 
-      .photo {
-          height: 0%;
-          width: 200%;
-      }
+    .photo {
+        height: 0%;
+        width: 200%;
+    }
 
-      .links {
+    .links {
         margin-top: 40px;
         flex-direction: unset !important;
         justify-content: space-between !important;
@@ -137,28 +137,23 @@
     }
 }
 
-@media(max-width: 680px) {
+@media (max-width: 680px) {
+    .head-greeting {
+        h1 {
+            font-size: 32px !important;
+        }
 
-.head-greeting {
+        span {
+            font-size: 28px;
+        }
 
-    h1 {
-        font-size: 32px !important;
-    }
-
-    span {
-        font-size: 28px;
-    }
-
-    a {
-        font-size: 14px;
+        a {
+            font-size: 14px;
+        }
     }
 }
-}
 
-
-
-@media(max-width: 600px) {
-
+@media (max-width: 600px) {
     .links {
         margin-top: 10px;
         flex-direction: column !important;
