--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 body {
-    height: 100%;
     margin: 0;
-    font-family: 'Roboto', "Helvetica Neue", sans-serif;
+    font-family: 'Roboto', 'Helvetica Neue', sans-serif;
 }
 
 body::-webkit-scrollbar {
@@ -18,7 +17,6 @@ body::-webkit-scrollbar {
   }
 
 html {
-    height: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
