--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -162,4 +162,51 @@
     }
   }
 
+  .loading {
+    z-index: 99;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid rgba(var(--theme-color-1-values), 1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+}
+
+.loading::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -5px;
+    left: -5px;
+    border-radius: 50%;
+    border: 5px solid transparent;
+    border-right: 5px solid rgb(92, 173, 254);
+    animation: loading 1s ease-in-out infinite;
+}
+
+@keyframes loading {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+.confirmation {
+  z-index: 99;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color:#acb9df;
+  height: 500px;
+  width: 250px;
+  border-radius: 10px;
+  border: 1px solid #CCD6F6;
+  padding: 10px;
+}
+
 
