--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,25 +1,33 @@
 <div id="projects" class="bg1">
     <div class="bg-container">
         <h2>My Projects</h2>
-        <div class="projects-container">
-            <div *ngFor="let project of projects; let i = index;" class="project">
-                <div>
-                    <img class="project-img" src="assets/img/{{ projects[i].img }}">
-                    <div class="text">
-                        <span class="title">{{ projects[i].title }}</span>
-                        <span class="description">{{ projects[i].description }}</span>
-                        <span class="tool">Tools: {{ projects[i].tool }}</span>
-                        <div class="links">
-                            <a href="{{ projects[i].url }}" target="_blank" class="link-background">
-                                <img class="link-img" src="assets/icon/browser.png">
-                            </a>
-                            <a href="{{ projects[i].git }}" target="_blank" class="link-background">
-                                <img class="link-img" src="assets/icon/github.png">
-                            </a>
+        <div class="filter-row">
+            <div class="filter" [class.active]="currentFilter === 'All'" (click)="updateFilter('All')">All</div>
+            <div class="filter" [class.active]="currentFilter === 'Angular'" (click)="updateFilter('Angular')">Angular</div>
+            <div class="filter" [class.active]="currentFilter === 'JavaScript'" (click)="updateFilter('JavaScript')">JavaScript</div>
+        </div>
+        <div>
+            <div class="projects-container">
+                <div *ngFor="let project of selectedProjects; let i = index;" class="project">
+                    <div>
+                        <img class="project-img" src="assets/img/{{ selectedProjects[i].img }}">
+                        <div class="text">
+                            <span class="title">{{ selectedProjects[i].title }}</span>
+                            <span class="description">{{ selectedProjects[i].description }}</span>
+                            <span class="tool">Tools: {{ selectedProjects[i].tool }}</span>
+                            <div class="links">
+                                <a href="{{ selectedProjects[i].url }}" target="_blank" class="link-background">
+                                    <img class="link-img" src="assets/icon/browser.png">
+                                </a>
+                                <a href="{{ selectedProjects[i].git }}" target="_blank" class="link-background">
+                                    <img class="link-img" src="assets/icon/github.png">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+    
