--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,6 +4,7 @@
     align-items: center;
     width: 90%;
     color: #acb9df;
+    letter-spacing: 0px;
 
     img {
         height: 30%;
@@ -33,6 +34,7 @@
     align-items: center;
     width: 90%;
     color: #acb9df;
+    letter-spacing: 0px;
 }
 
 .description {
