--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -30,16 +30,13 @@
     border-radius: 10px;
     margin: 16px;
     margin-bottom: 60px;
-    box-shadow: 10px 20px 15px rgba(180, 169, 169, 0.5);
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 
     span {
         color: #ccd6f6;
         font-size: 20px;
     }
 
-    &:hover {
-        box-shadow: 10px 20px 15px rgba(180, 169, 169, 1);
-    }
 }
 
 .skill-icon {
@@ -52,7 +49,7 @@
     width: 50px;
     background-color: #ebebeb;
     border-radius: 10px;
-    box-shadow: 10px 15px 10px rgba(180, 169, 169, 0.5);
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 
     img {
         height: 40px;
