--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -22,8 +22,10 @@
         height: 32px;
         background-color: #1e3563;
         color: #acb9df;
-        border: none;
         padding: 5px;
+        border-radius: 10px;
+        border: 1px solid #acb9df;
+        outline: none;
   
         &.ng-touched,
         &.ng-dirty &.ng-invalid {
@@ -71,9 +73,11 @@
         height: 150px;
         box-sizing: border-box;
         background-color: #1e3563;
-        border: none;
         resize: none;
         padding: 5px;
+        border-radius: 10px;
+        border: 1px solid #acb9df;
+        outline: none;
   
         &.ng-touched,
       &.ng-dirty &.ng-invalid {
@@ -198,15 +202,39 @@
   z-index: 99;
   position: absolute;
   display: flex;
-  justify-content: center;
   align-items: center;
+  text-align: center;
   flex-direction: column;
   color:#acb9df;
-  height: 500px;
   width: 250px;
   border-radius: 10px;
   border: 1px solid #CCD6F6;
   padding: 10px;
+  opacity: 1 !important;
+
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    width: 90px;
+    height: 50px;
+    background-color: #1e3563;
+    color: #8892b0;
+    border: 1px solid #CCD6F6;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #8892b0;
+        color: #2a3c5a;
+    }
+  }
+}
+
+.transparent {
+  opacity: 0.5;
 }
 
 
