--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,7 +6,7 @@
 }
 
 .bg-container-footer {
-    height: 60px;
+    height: 8vh;
     width: 80%;
     display: flex;
     justify-content: space-between;
