--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -27,7 +27,7 @@
         color: #acb9df;
         padding: 5px;
         border-radius: 10px;
-        border: 1px solid #acb9df;
+        border: 1px solid transparent;
         outline: none;
   
         &.ng-touched,
@@ -79,7 +79,7 @@
         resize: none;
         padding: 5px;
         border-radius: 10px;
-        border: 1px solid #acb9df;
+        border: 1px solid transparent;
         outline: none;
   
         &.ng-touched,
@@ -119,7 +119,7 @@
         height: 50px;
         background-color: #1e3563;
         color: #8892b0;
-        border: 1px solid #CCD6F6;
+        border: 1px solid transparent;
         cursor: pointer;
 
         &:hover {
@@ -211,7 +211,7 @@
   color:#acb9df;
   width: 250px;
   border-radius: 10px;
-  border: 1px solid #CCD6F6;
+  border: 1px solid transparent;
   padding: 10px;
   opacity: 1 !important;
 
@@ -226,7 +226,7 @@
     height: 50px;
     background-color: #1e3563;
     color: #8892b0;
-    border: 1px solid #CCD6F6;
+    border: 1px solid transparent;
     cursor: pointer;
 
     &:hover {
