--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -59,9 +59,9 @@
         border-radius: 10px;
         width: 40%;
         padding: 20px;
-        background-color: transparent;
+        background-color: #1e3563;
         color: #8892b0;
-        border: 3px solid #ccd6f6;
+        border: 3px solid transparent;
         cursor: pointer;
 
         &:hover {
