--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="bg-container-footer">
         <div class="link">
             <a routerLink="/imprint">Imprint</a>
-            <a routerLink="/legal">Legal Notice</a>
+            <a routerLink="/legal">Privacy</a>
         </div>
         <div class="icon">
             <a href="https://github.com/andrea-boehme" target="_blank">
