--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -54,6 +54,6 @@
             href="https://www.kanzlei-hasselbach.de/">der Kanzlei Hasselbach, Rechtsanwälte für Arbeitsrecht und
             Familienrecht</a><br><br>
 
-            <b>Logo and icon created at LogoMakr.com/app</b>
+            <b>Logo und Symbol bei LogoMakr.com/app erstellt</b>
     </div>
 </div>
