--- a/src/app/legal/legal.component.html
+++ b/src/app/legal/legal.component.html
@@ -187,6 +187,113 @@
             <p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a
                         href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank"
                         rel="noopener">externe Datenschutzbeauftragte</a> (Version #2020-09-30).</em></p>
+            <br><br><br><br><br>
+
+            <h1>Privacy policy</h1>
+<p>Responsible party pursuant to data protection laws, in particular the EU General Data Protection Regulation (GDPR), is</p>
+<p>Andrea Böhme</p>
+<h2>Your rights as the data subject</h2>
+<p>You can exercise the following rights at any time using the contact details of our data protection officer:</p>
+<ul>
+<li>Information on your data stored by us and the processing thereof (Art. 15 GDPR), </li>
+<li>Rectification of inaccurate personal data (Art. 16 GDPR), </li>
+<li>Deletion of your data stored by us (Art. 17 GDPR), </li>
+<li>Restriction of the data processing, provided that we may not delete your data due to legal obligations (Art. 18 GDPR), </li>
+<li>Objection to the processing of your data with us (Art. 21 GDPR) and </li>
+<li>Data portability, provide that you have consented to the data processing or have entered into a contract with us (Art. 20 GDPR). </li>
+</ul>
+<p>If you have given us consent, you may withdraw it at any time, which will remain in effect in the future.</p>
+<p>You can contact a supervisory authority with a complaint at any time, e.g. the supervisory authority of the state of your residence or the authority that oversees us as the responsible party.</p>
+<p>You’ll find a list of supervisory authorities (for the non-public area) with their respective addresses at: <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html" target="_blank" rel="nofollow noopener">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.</p>
+<p></p><h2>Collecting general information during a visit to our website </h2>
+<h3>Type and purpose of the processing</h3>
+<p>When you access our website – i.e. if you do not register or submit information – information of a general nature will be collected automatically. This information (server log files) contains the type of web browser, the operating system used, the domain name of your Internet service provider, your IP address and the like.</p>
+<p>It is processed in particular for the following purposes:</p>
+<ul>
+<li>Ensuring an unproblematic website connection</li>
+<li>Ensuring seamless use of our website</li>
+<li>Analysis of system security and stability as well as</li>
+<li>For additional administrative purposes.</li>
+</ul>
+<p>We will not use your data to draw conclusions about your person. This type of information will be statistically analysed by us if necessary to optimise our website and its underlying technology.</p>
+<h3>Legal basis</h3>
+<p>The processing occurs according to Art. 6 Para. 1 (f) GDPR, based on our legitimate interest in improving the stability and functionality of our website.</p>
+<h3>Recipients</h3>
+<p>Recipients of the data may be technical service providers, who work on the operation and maintenance of our website as the processor.</p>
+<h3>Retention period</h3>
+<p>The data will be deleted as soon as they are no longer required for the reason they were collected. This is generally the case, after the respective session has ended, for data that are used to make the website available.</p>
+<h3>Mandatory or required provision</h3>
+<p>The provision of the aforementioned personal data is neither legally nor contractually mandatory. Without the IP address however, the service and functionality of our website are not guaranteed. Furthermore, individual services can be unavailable or limited. For this reason, an objection is excluded.</p>
+<p></p><h2>Cookies</h2>
+<h3>Type and purpose of the processing</h3>
+<p>Like many other websites, we use so-called ‘cookies’. Cookies are small text files that are stored on your device (laptop, tablet, smartphone, etc.) when you visit our website.</p>
+<p>With cookies, we receive certain information such as IP address, type of browser and operating system used.</p>
+<p>Cookies cannot be used to start programs or to transmit viruses to a computer. Based on the information contained in cookies, we can facilitate your navigation of our site and properly display our webpages for you.</p>
+<p>The data collected by us will not be shared with third parties under any circumstances nor will a link to personal data be created without your consent.</p>
+<p>Of course, you can view our website without cookies. Internet browser are regularly configured to accept cookies. In general, you can disable the use of cookies via your browser settings at any time. Please use your Internet browser’s help function to learn how to change these settings, and keep in mind that individual features of our website may not work if you have disabled the use of cookies.</p>
+<h3>Retention period and cookies used</h3>
+<p>If you allow us to use cookies, via your browser settings or consent, the following cookies may be utilised on our web pages:</p>
+<p></p><p>In the following sections, we provide you with information concerning how these cookies can (also) pertain to personal data.</p>
+<p>In your browser settings, you can delete individual cookies or the entire set of cookies. You will also find information and instructions on how to delete these cookies or prevent them from being saved in advance. The following links provide the information you’ll need for the respective browser providers:</p>
+<ul>
+<li>Mozilla Firefox: <a href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored" target="_blank" rel="nofollow noopener">https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</a></li>
+<li>Internet Explorer: <a href="https://support.microsoft.com/en-gb/help/17442/windows-internet-explorer-delete-manage-cookies" target="_blank" rel="nofollow noopener">https://support.microsoft.com/en-gb/help/17442/windows-internet-explorer-delete-manage-cookies</a></li>
+<li>Google Chrome: <a href="https://support.google.com/accounts/answer/61416?hl=en" target="_blank" rel="nofollow noopener">https://support.google.com/accounts/answer/61416?hl=en</a></li>
+<li>Opera: <a href="https://www.opera.com/o/ie-simple" target="_blank" rel="nofollow noopener">https://www.opera.com/o/ie-simple</a></li>
+<li>Safari: <a href="https://support.apple.com/kb/PH17191?locale=de_DE&viewlocale=en_US" target="_blank" rel="nofollow noopener">https://support.apple.com/kb/PH17191?locale=de_DE&viewlocale=en_US</a></li>
+</ul>
+<p></p><h2>Registration on our website</h2>
+<h3>Type and purpose of the processing</h3>
+<p>With the registration to use our personalised services, some personal data such as name, address, contact and communication information (e.g. phone number and e-mail address) are collected. If you are registered with us, you can access content and services that we only offer to registered users. Registered users also have the ability to change or delete the data entered during registration at any time. At any time, we will also provide you with information on the personal data about you that we have saved.</p>
+<h3>Legal basis</h3>
+<p>The data entered during registration are processed on the basis of the user’s consent (Art. 6 Para. 1 (a) GDPR).</p>
+<p>If the registration fulfils the obligations of a contract, whose contractual party is the data subject, or serves to implement pre-contractual measures, the additional legal basis for the data processing is Art. 6 Para. 1 (b) GDPR.</p>
+<h3>Recipients</h3>
+<p>Recipients of the data may be technical service providers, who work on the operation and maintenance of our website as the processor.</p>
+<h3>Retention period</h3>
+<p>Data are only processed in this context provided that the corresponding consent has been given. The data will be deleted thereafter, provided that no statutory retention obligations prohibit the deletion. To contact us in this regard, please use the contact information provided at the end of this privacy policy.</p>
+<h3>Mandatory or required provision</h3>
+<p>The provision of your personal data is voluntary, based solely on your consent. Without the provision of your personal data, we cannot give you access to our content and services.</p>
+<p></p><h2>Contact form</h2>
+<h3>Type and purpose of the processing</h3>
+<p>The data you enter are used for individual communication with you. A valid e-mail address and your name are required for this communication, which serves to organize your inquiry and the respective subsequent reply. Providing additional information is optional.</p>
+<h3>Legal basis</h3>
+<p>The processing of the data entered in the contact form occurs on the basis of a legitimate interest (Art. 6 Para. 1 (f) GDPR).</p>
+<p>By providing the contact form, our aim is to facilitate an uncomplicated means for you to contact us. The information you enter will be used to process the inquiry and saved for possible follow-up questions.</p>
+<p>If you contact us to request an offer, the processing of the information provided in the contact form will occur in order to implement pre-contractual measures (Art. 6 Para. 1 (b) GDPR).</p>
+<h3>Recipients</h3>
+<p>Recipients of the data may be processors.</p>
+<h3>Retention period</h3>
+<p>The data will be deleted no later than 6 months after processing the inquiry.</p>
+<p>Provided that we enter into a contract together, we will use the statutory retention periods in the German Commercial Code (Handelsgesetzbuch) and delete your data according to the respective stipulated deadlines.</p>
+<h3>Mandatory or required provision</h3>
+<p>The provision of your personal data is voluntary. However, we can only process your inquiry if you provide us with your name, e-mail address and the reason for your inquiry.</p>
+<p></p><h2>Using script libraries (Google Webfonts)</h2>
+<h3>Type and purpose of the processing</h3>
+<p>In order to present our content correctly and graphically appealing across all browsers, we use ‘Google Webfonts’ from Google LLC (1600 Amphitheater Parkway, Mountain View, CA 94043, USA, hereinafter ‘Google’) to display fonts on this website.</p>
+<p>You’ll find the data protection guidelines of the library operator Google here: <a href="https://www.google.com/policies/privacy/" rel="noopener nofollow" target="_blank">https://www.google.com/policies/privacy/</a></p>
+<h3>Legal basis</h3>
+<p>Your consent is the legal basis for the integration of Google Webfonts and the associated data transfer to Google (Art. 6 Para. 1 (a) GDPR).</p>
+<h3>Recipients</h3>
+<p>The use of script libraries or font libraries automatically triggers a connection to the operator of the library. It is theoretically possible – but currently also unclear whether and to what end – that the operator, in this case Google, will collect data.</p>
+<h3>Retention period</h3>
+<p>We do not collect any personal data via the integration of Google Webfonts.</p>
+<p>You’ll find additional information on Google Webfonts at <a href="https://developers.google.com/fonts/faq" rel="noopener nofollow" target="_blank">https://developers.google.com/fonts/faq</a> and in Google’s privacy policy: <a href="https://www.google.com/policies/privacy/" rel="noopener nofollow" target="_blank">https://www.google.com/policies/privacy/</a>.</p>
+<h3>Third country transfers</h3>
+<p>Google processes your data in the United States of America and is subject to the EU-U.S. Privacy Shield: <a href="https://www.privacyshield.gov/EU-US-Framework" rel="noopener nofollow" target="_blank">https://www.privacyshield.gov/EU-US-Framework</a>.</p>
+<h3>Mandatory or required provision</h3>
+<p>The provision of your personal data is neither legally nor contractually required. However, the correct presentation of standard-fonts content is not possible without this provision.</p>
+<h3>Revocation of consent</h3>
+<p>The programming language JavaScript is regularly used to display content. Thus, you can opt out of the data processing by disabling JavaScript execution in your browser or by installing a JavaScript blocker. Please note that this may result in functional limitations on the website.</p>
+<p></p><h2>SSL encryption</h2>
+<p>To protect the security of your data during transmission, we use state-of-the-art encryption methods (such as SSL) via HTTPS.</p>
+<p></p><h2>Revision of our privacy policy</h2>
+<p>We reserve the right to amend this privacy policy so that it always complies with current legal requirements or to implement changes to our services in the privacy policy, e.g. when introducing new services. Your next visit will be subject to the new privacy policy.</p>
+<h2>Questions for the data protection officer</h2>
+<p>If you have any questions pertaining to data protection, please send us an e-mail or contact the person responsible for data protection in our organization: </p>
+<p></p><p><em>The privacy policy was created via the activeMind.legal <a href="https://www.activemind.legal/legal-advice/gdpr/privacy-policy-generator/" rel="noopener" target="_blank">privacy policy generator</a> (Version: #2018-09-24).</em></p>
+
+        
         </div>
     </div>
 </div>
