--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -46,8 +46,7 @@
                         <img src="assets/img/flight.png">
                     </div>
                     <h3>MY GOAL</h3>
-                    <span>Therefore I'm looking for an interesting and challenging role in a dynamic company with smart
-                        ideas.</span>
+                    <span>I am looking forward to building on my experience and starting my career in IT in a junior developer position.</span>
                 </div>
             </div>
         </div>
